# gmail-mcp

./: .gitignore  CLAUDE.md  banco_de_ideas.md  claude_memory.md  cleanup.py  daily_summary.py  dashboard.py  financial_extractor.py  gmail_auth.py  gmail_logger.py  labeler.py  labels.py  main.py  orchestrator.py  payment_planner.py  preview_daily_summary.html  pyproject.toml  railway.toml  requirements.txt  transaction_classifier.py
.claude/: settings.local.json
config/: label_rules.json  settings.json  spam_senders.txt
data/: notas.txt  recomendaciones.json
finanzas/: dashboard.py  movimientos.csv
