[project]
name = "gmail-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "google-api-python-client>=2.197.0",
    "google-auth-httplib2>=0.4.0",
    "google-auth-oauthlib>=1.4.0",
    "mcp[cli]>=1.27.2",
    "schedule>=1.2.2",
    "flask>=3.0.0",
    "pdfplumber>=0.11.0",
]
